# chess3_construction

./: README.md  README.rst
pipeline/: examine_short_exons.py  filter_readthrough.py  find_crs.py  process_assembly.py  replace_chrM.py  run_orfanage_ppp.py  sashimi.ipynb  step1_process_assembly.ipynb  step2_select_transcripts_ml.ipynb  step3_refine.ipynb  step4_remove_tags.ipynb  step5_namer.ipynb  step6_add_missing.ipynb
reviews/: review_fixes.ipynb  review_main.ipynb  review_stats.ipynb
scripts/: definitions.py
scripts/assembly_stats/: CMakeLists.txt  Makefile  README.md  main.cpp
scripts/assembly_stats/src/: TrackingStats.cpp  TrackingStats.h  TrackingTree.cpp  TrackingTree.h  gff.h
scripts/nitron/: nitron.py
scripts/nitron/py_src/: __init__.py  commons.py  extract.py  extract_old.py  model.py
scripts/tiecov_sjs/: CMakeLists.txt  Makefile
scripts/tiecov_sjs/src/: GSam.h  extract_pairs.cpp  tiebrush.cpp  tiebrush_comp.cpp  tieclean.cpp  tiecov.cpp  tiecov_old.cpp  tiecov_sjs.cpp  tieme.cpp  tmerge.cpp  untie.cpp
